--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-iframe": "^1.8.0",
     "react-native": "0.68.2",
+    "react-native-image-view": "^2.1.9",
     "react-native-read-more-text": "^1.1.2",
     "react-native-see-more-inline": "^1.3.0",
     "react-native-web": "0.17.7"
