--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@expo/vector-icons": "^13.0.0",
     "@fawazahmed/react-native-read-more": "^2.3.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
     "expo-cli": "^5.5.1",
     "expo-status-bar": "~1.3.0",
@@ -22,6 +25,8 @@
     "react-native": "0.68.2",
     "react-native-image-view": "^2.1.9",
     "react-native-read-more-text": "^1.1.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.15.0",
     "react-native-see-more-inline": "^1.3.0",
     "react-native-web": "0.17.7"
   },
